--- a/BI586_dad2_analysis.Rmd
+++ b/BI586_dad2_analysis.Rmd
@@ -248,7 +248,7 @@ rownames(samdf) <- samdf$sample
 Construct phyloseq object (straightforward from dada2 outputs)
 ```{r}
 ps <- phyloseq(otu_table(seqtab.nochim, taxa_are_rows=FALSE), 
-               sample_data(samdf), 
+               sample_names(samdf), 
                tax_table(taxa))
 ps
 ```
@@ -271,7 +271,7 @@ plot_bar(ps.top90, x="Sample", fill="Class")
 
 visusalize via counts rather than abundances:
 ```{r}
-plot_bar(ps, x = "sample", fill= "Class") #+ facet_wrap("tank")
+plot_bar(ps, x = "Sample", fill= "Class")
 ```
 
 Obtain a csv file for the phyloseq data. Will give you the abundances for each sample and class. Useful for constructing the heatmap. Also, enables you to use ggplot, and construct more aesthetically pleasing plot.
