--- a/BI586_dad2_analysis.Rmd
+++ b/BI586_dad2_analysis.Rmd
@@ -24,14 +24,14 @@ For this assignment, we used the data used in ["Patterns of environmental variab
 
 Speare et. al.'s study explores the bacterial and algal symbionts associated with two species of Caribbean stony corals-- *Siderastrea siderea* and *Siderastrea radians* found on the Belize Mesoamerican Barrier Reef (Figure 1).  Their study aimed to investigate the factors that determine variability in Bacterial Community Composition (BCC); specifically how BCC varried across two species in the same genus, and how BCC varried across location, both in different sites, and inshore v. offshore at specific sites.  
 
-![*Siderastrea siderea*](/Users/elsa/Desktop/BI_586/BI586-Project1/BI586-Project1/Sid_photo.jpeg)
+![*Siderastrea siderea*](/Users/ericasun/Documents/GitHub/BI586-Project1/Sid_photo.jpeg)
 Figure 1: photo via *Coralpedia* (The University of Warwick)
 
 For their analysis, Speare et. al. amplified a 444 bp section of the V3-V4 variable regions of the 16S gene. The 16S rRNA gene is commonly used in DNA barcoding of bacteria, and was therefore an optimal choice for investigating coral BCC.  
 
 In brief summary, the team found that BCC varried significantly between species, and from site-to-site. However, their findings explained >11% of variability, and future investigation into the factors determining BCC and algal composition are necessary (Speare et. al., 2020).  
 
-For this assignment, we looked at subsample of Speare et. al.'s data, 10 *Siderastrea siderea*, 5 from inshore locations and 5 from offshore locations, and accessed the genomic data from the [NCBI Sequence Read Archive (SRA)](https://www.ncbi.nlm.nih.gov/sra).  
+For this assignment, we looked at subsample of Speare et. al.'s data, 10 *Siderastrea siderea*, 5 from inshore locations and 5 from offshore locations, and accessed the genomic data from the [NCBI Sequence Read Archive (SRA)](https://www.ncbi.nlm.nih.gov/sra).
 ---
 # **STEP-BY-STEP METHODS AND DATA ANALYSIS:** 
 
@@ -83,15 +83,15 @@ library(phyloseq)
 We need to make sure that all the files we are working with are in the same directory.
 ```{r, eval=FALSE}
 # Make sure to change this to the directory you're working in!
-# setwd('/Users/ericasun/Documents/GitHub/BI586-Project1/') # for Erica's local computer
-setwd('/usr4/bs831/ericasun/BI586/BI586-Project1') # for Erica's SCC
+setwd('/Users/ericasun/Documents/GitHub/BI586-Project1/') # for Erica's local computer
+# setwd('/usr4/bs831/ericasun/BI586/BI586-Project1') for Erica's SCC
 ```
 
 ## Trimming and Filtering
 Set our current working directory as path, and set all of the files in there as fns. 
 ```{r}
-#path <- '/Users/ericasun/Documents/GitHub/BI586-Project1/' # for Erica's local computer
-path <- '/usr4/bs831/ericasun/BI586/BI586-Project1' # for Erica's SCC
+path <- '/Users/ericasun/Documents/GitHub/BI586-Project1/' # for Erica's local computer
+# path <- '/usr4/bs831/ericasun/BI586/BI586-Project1' # for Erica's SCC
 fns <- list.files(path)
 ```
 
@@ -136,13 +136,14 @@ out <- dada2::filterAndTrim(fnFs, filtFs, truncLen= 200, #end of single end read
                      maxN=0, #DADA does not allow Ns
                      maxEE=1, #allow 1 expected errors, where EE = sum(10^(-Q/10)); more conservative, model converges
                      truncQ=2, #standard filtering parameters
-                     trimLeft=20, #N nucleotides to remove from the start of each read: ITS2 primer = F 20bp
+                     trimLeft=20, #20 nucleotides are removed from the start of each read: The degenerative bases + the primer
                      rm.phix=TRUE, #remove reads matching phiX genome
                      compress=TRUE, multithread=TRUE) # On Windows set multithread=FALSE
 
 head(out)
 tail(out)
 ```
+
 ## Learn Error Rates
 Every amplicon dataset has a different set of error rates, the learnError method can learn the error model from the data. The algorithm must begin with an initial guess, for which the maximum possible error rates in the data are used. For example, when the most abundant sequence is correct, and all the rest are errors.  
 Some things to keep in mind --  
@@ -177,7 +178,7 @@ The DADA2 algorithm inferred 80 true sequence variants from the 1785 unique sequ
 Now let's construct a sequnce table.
 ```{r, results='hide'}
 seqtab <- dada2::makeSequenceTable(dadaFs)
-head(seqtab)
+#head(seqtab)
 ```
 
 ## Remove Chimeras
@@ -210,7 +211,7 @@ write.csv(track,file="ReadFilterStats_AllData_final.csv",row.names=TRUE,quote=FA
 
 ## Assign Taxonomy
 DADA2 uses naive Bayesian classifier method to assign taxonomy. The assignTaxonomy function takes as input a set of sequences to be classified and a tranning set of reference sequence with known taxonomy. It outputs taxonomic assignments with at least minBoot bootstrap confidence.
-```{r}
+```{r, results='hide'}
 taxa <- dada2::assignTaxonomy(seqtab.nochim, "silva_nr99_v138_train_set.fa", minBoot=70,multithread=TRUE,tryRC=TRUE,outputBootstraps=FALSE)
 #minboot should be 70
 #Obtain a csv file for the taxonomy so that it's easier to map the sequences for the heatmap.
@@ -235,9 +236,9 @@ Pyloseq is going to give us some visualization! Import the required libraries.
 library(phyloseq)
 library(ggplot2)
 ```
-#import dataframe holding sample information
-#have your samples in the same order as the seqtab file in the rows, variables as columns
-```{r}
+
+Now we can import dataframe holding sample information. Then we can have the samples in the same order as the seqtab file in the rows, variables as columns
+```{r, results='hide'}
 samdf<-read.csv("variabletable.csv")
 head(samdf)
 head(seqtab.nochim)
@@ -245,7 +246,7 @@ head(taxa)
 rownames(samdf) <- samdf$sample
 ```
 
-Construct phyloseq object (straightforward from dada2 outputs)
+We're ready to construct phyloseq object now!(straightforward from dada2 outputs)
 ```{r}
 ps <- phyloseq(otu_table(seqtab.nochim, taxa_are_rows=FALSE), 
                sample_names(samdf), 
@@ -260,7 +261,7 @@ ids <- paste0("sq",seq(1, length(colnames(seqtab.nochim))))
 colnames(seqtab.nochim) <- ids
 ```
 
-Bar-plots
+Let's visualize using Bar-plots
 ```{r}
 top90 <- names(sort(taxa_sums(ps), decreasing=TRUE))[1:90]
 ps.top90 <- transform_sample_counts(ps, function(OTU) OTU/sum(OTU))
@@ -269,9 +270,9 @@ ps.top90 <- prune_taxa(top90, ps.top90)
 plot_bar(ps.top90, x="Sample", fill="Class") 
 ```
 
-visusalize via counts rather than abundances:
-```{r}
-plot_bar(ps, x = "Sample", fill= "Class")
+Ideally, we will want to visusalize via counts rather than abundances. However this is not working. Since we have the other two abundance plots, we decided to just skip this one.
+```{r, eval=FALSE}
+plot_bar(ps, x = "sample", fill= "Class")
 ```
 
 Obtain a csv file for the phyloseq data. Will give you the abundances for each sample and class. Useful for constructing the heatmap. Also, enables you to use ggplot, and construct more aesthetically pleasing plot.
@@ -279,8 +280,9 @@ Obtain a csv file for the phyloseq data. Will give you the abundances for each s
 psz <- psmelt(ps.top90)
 write.csv(psz, file="Phyloseqoutputfinal.csv")
 p <- ggplot(psz, aes(x=Sample, y=Abundance, fill=Class))
-p + geom_bar(stat="identity", colour="black")
+p + geom_bar(stat="identity", colour="black") + theme(axis.text.x = element_text(angle = 90))
 ```
+
 ---
 # **REFERENCES:**
 
